[package]
name = "libfreertos-sys"
version = "0.1.0"
authors = ["Akos Vandra <axos88@gmail.com>"]
edition = "2018"


[features]
default = []
foo = []

[dependencies]
cortex-m = "0.6.0"
bare-metal = { version = "*", features = ["const-fn"] }
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"


[build-dependencies]
cc = { version = "*", features = ["parallel"]}
bindgen = "*"
indoc = "*"
