[package]
name = "libfreertos-sys"
version = "0.1.0"
authors = ["Akos Vandra <axos88@gmail.com>"]
edition = "2018"


[features]
default = ["preemption", "tick_rate_hz_100", "max_priorities_5", "static_allocation", "dynamic_allocation", "named_tasks_16"]
preemption = []
tickless = []
tick_rate_hz_100 = []
tick_rate_hz_250 = []
max_priorities_5 = []
named_tasks_16 = []
named_tasks_32 = []
named_tasks_256 = []
mutextes = []
recursive_mutexes = []
counting_semaphore = []
alternative_api = []
static_allocation = []
dynamic_allocation = []
idle_hook = []
tick_hook = []
check_stack_overflow = []
daemon_hook = []
timers = []

weak_hooks = [] # Generate weak hooks that can be overridden in the application. Is there any real use case when we want to have the feature enabled, but not actually define the hooks in the application?

port_cm3 = []
port_cm0 = []

[dependencies]
cortex-m = "0.6.0"
bare-metal = { version = "*", features = ["const-fn"] }
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"


[build-dependencies]
cc = { version = "*", features = ["parallel"]}
bindgen = "*"
indoc = "*"
